[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/HUD/StarOff.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/HUD.gd" type="Script" id=2]
[ext_resource path="res://Assets/HUD/TouchControlMove Off.png" type="Texture" id=3]
[ext_resource path="res://Assets/HUD/Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/HUD/HealthBarOver9.png" type="Texture" id=5]
[ext_resource path="res://Assets/HUD/HealthBarProgress9.png" type="Texture" id=6]
[ext_resource path="res://Assets/HUD/TouchControlMove On.png" type="Texture" id=7]
[ext_resource path="res://Assets/HUD/TouchControlAttack On.png" type="Texture" id=8]
[ext_resource path="res://Assets/HUD/TouchControlAttack Off.png" type="Texture" id=9]
[ext_resource path="res://Assets/HUD/TouchControlJump On.png" type="Texture" id=10]
[ext_resource path="res://Assets/HUD/TouchControlJump Off.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Baloo_Tamma/BalooTamma-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -345.0
grow_horizontal = 2
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="Display"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1248.0
margin_bottom = 286.0
size_flags_vertical = 2

[node name="Columns" type="HBoxContainer" parent="Display/Rows"]
margin_right = 1216.0
margin_bottom = 112.0
custom_constants/separation = 128

[node name="HealthMargin" type="MarginContainer" parent="Display/Rows/Columns"]
margin_top = 40.0
margin_right = 320.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HealthBar" type="TextureProgress" parent="Display/Rows/Columns/HealthMargin"]
margin_right = 320.0
margin_bottom = 32.0
value = 75.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
stretch_margin_left = 16
stretch_margin_top = 16
stretch_margin_right = 16
stretch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsMargin" type="MarginContainer" parent="Display/Rows/Columns"]
margin_left = 448.0
margin_top = 10.0
margin_right = 768.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Stars" type="HBoxContainer" parent="Display/Rows/Columns/StarsMargin"]
margin_left = 8.0
margin_right = 312.0
margin_bottom = 92.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star_1" type="TextureRect" parent="Display/Rows/Columns/StarsMargin/Stars"]
margin_right = 96.0
margin_bottom = 92.0
texture = ExtResource( 1 )

[node name="star_2" type="TextureRect" parent="Display/Rows/Columns/StarsMargin/Stars"]
margin_left = 104.0
margin_right = 200.0
margin_bottom = 92.0
texture = ExtResource( 1 )

[node name="star_3" type="TextureRect" parent="Display/Rows/Columns/StarsMargin/Stars"]
margin_left = 208.0
margin_right = 304.0
margin_bottom = 92.0
texture = ExtResource( 1 )

[node name="StageLabelMargin" type="MarginContainer" parent="Display/Rows/Columns"]
margin_left = 896.0
margin_right = 1216.0
margin_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="StageLabel" type="Label" parent="Display/Rows/Columns/StageLabelMargin"]
margin_right = 320.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 4 )
text = "STAGE 01"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabelContainer" type="MarginContainer" parent="Display/Rows"]
margin_top = 116.0
margin_right = 1216.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="InfoLabel" type="Label" parent="Display/Rows/InfoLabelContainer"]
margin_right = 1216.0
margin_bottom = 138.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_constants/line_spacing = -30
text = "All in game-messages go herea  Blah blah it' too much text! no wait!!!! How is this possible!?"
align = 1
autowrap = true

[node name="TouchControls" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.69629
margin_top = -267.069
margin_right = -3.69629
margin_bottom = -11.0688
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left Cluster" type="Control" parent="TouchControls"]
margin_right = 1280.0
margin_bottom = 256.0
grow_vertical = 0

[node name="jump" type="TouchScreenButton" parent="TouchControls/Left Cluster"]
position = Vector2( 62.8636, -77.9312 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 11 )
pressed = ExtResource( 10 )
action = "player_jump"

[node name="Attack" type="TouchScreenButton" parent="TouchControls/Left Cluster"]
position = Vector2( 209.287, 78.9907 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 9 )
pressed = ExtResource( 8 )
action = "player_attack"

[node name="RightCluster" type="HBoxContainer" parent="TouchControls"]
margin_right = 1280.0
margin_bottom = 256.0
custom_constants/separation = 16
alignment = 2

[node name="LeftMargin" type="MarginContainer" parent="TouchControls/RightCluster"]
margin_left = 1248.0
margin_right = 1248.0
margin_bottom = 256.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TouchScreenButton" parent="TouchControls/RightCluster/LeftMargin"]
position = Vector2( -478.867, 126.581 )
rotation = -1.57079
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
pressed = ExtResource( 7 )
action = "player_left"

[node name="UpDownContainer" type="VBoxContainer" parent="TouchControls/RightCluster"]
margin_left = 1264.0
margin_right = 1264.0
margin_bottom = 256.0
grow_horizontal = 0

[node name="UpMargin" type="MarginContainer" parent="TouchControls/RightCluster/UpDownContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="TouchScreenButton" parent="TouchControls/RightCluster/UpDownContainer/UpMargin"]
position = Vector2( -332.304, -77.9312 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
pressed = ExtResource( 7 )
action = "player_forward"

[node name="DownMargin" type="MarginContainer" parent="TouchControls/RightCluster/UpDownContainer"]
margin_top = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="TouchScreenButton" parent="TouchControls/RightCluster/UpDownContainer/DownMargin"]
position = Vector2( -204.304, 208.425 )
rotation = -3.14159
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
pressed = ExtResource( 7 )
action = "player_backward"

[node name="RightMargin" type="MarginContainer" parent="TouchControls/RightCluster"]
margin_left = 1280.0
margin_right = 1280.0
margin_bottom = 256.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rigth" type="TouchScreenButton" parent="TouchControls/RightCluster/RightMargin"]
position = Vector2( -56.2563, 4 )
rotation = 1.5642
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
pressed = ExtResource( 7 )
action = "player_right"
